220_hub_spoke_firewall_pe_inspection/spoke1_vm_win.tf
resource "azurerm_network_interface" "nic-vm-spoke1-windows" {
  name                = "nic-vm-spoke1-windows"
  resource_group_name = azurerm_resource_group.rg-spoke1.name
  location            = azurerm_resource_group.rg-spoke1.location

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.snet-spoke1-vm.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = null
  }
}

resource "azurerm_windows_virtual_machine" "vm-spoke1-windows" {
  name                  = "vm-spoke1-win"
  resource_group_name   = azurerm_resource_group.rg-spoke1.name
  location              = azurerm_resource_group.rg-spoke1.location
  size                  = "Standard_D4ads_v6"
  priority              = "Spot"
  eviction_policy       = "Delete"
  admin_username        = "azureuser"
  admin_password        = "@Aa123456789"
  network_interface_ids = [azurerm_network_interface.nic-vm-spoke1-windows.id]
  license_type          = "Windows_Client" # Possible values are None, Windows_Client and Windows_Server.
  disk_controller_type  = "NVMe"           # "SCSI" # "IDE" # "SCSI" is the default value. "NVMe" is only supported for Ephemeral OS Disk.

  identity {
    type = "SystemAssigned"
  }

  os_disk {
    name                 = "os-disk-vm-windows"
    caching              = "ReadOnly"        # "ReadWrite" # None, ReadOnly and ReadWrite.
    storage_account_type = "StandardSSD_LRS" # "Standard_LRS"
    disk_size_gb         = 128

    diff_disk_settings {
      option    = "Local"    # Specifies the Ephemeral Disk Settings for the OS Disk. At this time the only possible value is Local.
      placement = "NvmeDisk" # "ResourceDisk" # "CacheDisk" # Specifies the Ephemeral Disk Placement for the OS Disk. NvmeDisk can only be used for v6 VMs
    }
  }

  source_image_reference {
    publisher = "MicrosoftWindowsDesktop"
    offer     = "windows-11"
    sku       = "win11-25h2-pro"
    version   = "latest"
  }

  boot_diagnostics {
    storage_account_uri = null
  }
}
